--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==1.10.6
 django-braces==1.11.0
 django-embed-video==1.1.0
+django-memcache-status==1.1
 olefile==0.44
 Pillow==4.0.0
 python3-memcached==1.51
